--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^4.11.0",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
